kubernetes/flask.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miksalotti
---
apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: miksalotti
  labels:
    app: flask
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30781
  selector:
    app: flask
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: flask-set
  namespace: miksalotti
spec:
  selector:
    matchLabels:
      app: flask
  serviceName: flask
  replicas: 1
  updateStrategy:
    type: RollingUpdate
#    rollingUpdate:
#      maxUnavailable: 0
#      maxSurge: 1
  template:
    metadata:
      namespace: miksalotti
      labels:
        app: flask
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - image: ghcr.io/ardcoras/miksalotti:master
          name: flask
          imagePullPolicy: Always
          ports:
            - containerPort: 30781
              name: flask
          readinessProbe:
            initialDelaySeconds: 1
            periodSeconds: 15
            timeoutSeconds: 5
            successThreshold: 2
            failureThreshold: 2
            httpGet:
              host:
              scheme: HTTP
              path: /
              httpHeaders:
              - name: Host
                value: miksalotti.ardcoras.fi
              port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: flask-route
  namespace: miksalotti
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`miksalotti.ardcoras.fi`)
      kind: Rule
      middlewares:
        - name: headers-default@file
      services:
        - name: flask
          port: 80
